--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.1",
+    "node-sass": "^4.13.0",
     "redux-devtools": "^3.3.2",
-    "webpack": "^4.29.4",
+    "sass-loader": "^8.0.0",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   }
